--- a/views/addText.ejs
+++ b/views/addText.ejs
@@ -12,7 +12,7 @@
 <body>
     <%- include('./components/header'); -%>
 
-    <h1 class="centertext">Add a Joke</h1>
+    <h1 class="centertext">Ajoute ton Texte </h1>
     <div>
         <div id="form">
             <div id="basicInfos">
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <div id="textContent">
-                <h2>Joke Answer</h2>
+                <h2>Text Content</h2>
                 <textarea type="text" id="content" name="text" class="textInput"> </textarea>
             </div>
-            <button onclick="submitText()">Submit</button>
+            <button onclick="submitText()">Envoyer</button>
         </div>
     </div>
 
