--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,6 +25,7 @@
             </div>
             <div id="buttons" class="centerDiv">
                 <a href="add-text"><button>Ajoute ton chef d'oeuvre</button></a>
+                <a href="../browse"><button>Rechercher des textes</button></a>
             </div>
 
         </div>
