Change name of pages

--- a/views/browseText.ejs
+++ b/views/browseText.ejs
@@ -7,7 +7,7 @@
     <link href="elements/css/general.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
 
-    <title>Add a text </title>
+    <title>Rechercher des textes</title>
 </head>
 <body>
     <%- include('./components/header'); -%>
