--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -7,7 +7,7 @@
     <link href="elements/css/createAccount.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
 
-    <title>Create an account</title>
+    <title>Créer un compte</title>
 </head>
 <body>
     <%- include('./components/header'); -%>
