--- a/views/seeText.ejs
+++ b/views/seeText.ejs
@@ -7,7 +7,7 @@
     <link href="/elements/css/general.css" type="text/css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
 
-    <title>Text</title>
+    <title>Texte</title>
 
 </head>
 <body onload="setInfos('<%= textId %>')">
