--- a/views/seeAccount.ejs
+++ b/views/seeAccount.ejs
@@ -7,7 +7,7 @@
     <link href="/elements/css/general.css" type="text/css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
 
-    <title>Account</title>
+    <title>Compte</title>
 
 </head>
 <body onload="setInfos('<%= userId %>')">
