--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="elements/css/documentation.css" rel="stylesheet">
-    <link href="elements/css/general.css" rel="stylesheet">
+    <link href="elements/css/general.css" rel="stylesheet" id="stylesheetMode">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
 
     <title>Documentation </title>
