--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="elements/css/general.css" rel="stylesheet">
+    <link href="elements/css/general.css" rel="stylesheet" id="stylesheetMode">
     <link href="elements/css/login.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
     <title>Login</title>
