--- a/public/elements/css/createAccount.css
+++ b/public/elements/css/createAccount.css
@@ -1,10 +1,14 @@
-
+body {
+    margin: auto;
+    background-color: var(--main-color);
+    color:  var(--second-color);;
+}
 
 #accountCreateDiv {
-    background-color: #ffffff;
+    background-color: var(--main-color);
     border-radius: 2px;
     border-style: solid;
-    border-color: black;
+    border-color: var(--second-color);
 
     display: block;
 }
@@ -25,7 +29,7 @@
 }
 
 .textInput {
-    border-color: rgb(0, 0, 0);
+    border-color: var(--second-color);
     border-style: solid;
     border-radius: 4px;
     font-size: 20px;
@@ -37,7 +41,7 @@ input[type="submit"]:disabled {
 }
 
 input[type="checkbox"] {
-    border-color: aliceblue;
+    border-color: var(--main-color);
     border-style: solid;
     transform: scale(2);
 
@@ -47,18 +51,18 @@ input[type="checkbox"] {
 
 input[type="submit"]:hover,
 input[type="submit"]:focus {
-  box-shadow: inset 0 -3.25em 0 0 black;
-  color: rgb(255, 255, 255);
+  box-shadow: inset 0 -3.25em 0 0 var(--second-color);
+  color: var(--main-color);
 
 }
 
 input[type="submit"] {
     padding: 30px;
     border-radius: 2px;
-    color: black;
-    background-color: #ffffff;
+    color:  var(--second-color);
+    background-color: var(--main-color);
     border-width: 1px;
-    border-color: black;
+    border-color: var(--second-color);
     border-style: solid;
     font-weight: bold;
     font-size: 20px;
