--- a/public/elements/css/seeText.css
+++ b/public/elements/css/seeText.css
@@ -1,11 +1,17 @@
+
+body {
+    margin: auto;
+    background-color: var(--main-color);
+}
+
 #text {
     margin: 10px;
     margin-left: 200px;
     margin-right: 200px;
-    color: black;
-    background-color: white;
+    color: var(--second-color);
+    background-color: var(--main-color);
     border-radius: 2px;
-    border-color: black;
+    border-color: var(--second-color);
     border-style: solid;
 }
 
