--- a/public/elements/css/general.css
+++ b/public/elements/css/general.css
@@ -87,9 +87,7 @@ button:focus {
 
 
 #header h1 {
-
     font-size: 80px;
-    font-weight: 80px;
     letter-spacing: calc(1em / 8);
     padding: calc(calc(1em / 8) / 2);
 
@@ -116,10 +114,6 @@ button:focus {
 
 #modeButton {
     margin-top: 10px;
-}
-
-#connexion {
-    
 }
 
 #connexion a {
@@ -195,3 +189,110 @@ input[type="submit"] {
     margin-top: 10px;
 }
 
+/** Burger Menu **/
+.sidenav {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: -250px;
+    background-color: rgb(255, 242, 242);
+    padding-top: 60px;
+    transition: left 0.5s ease;
+  }
+  
+  /* Sidenav menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--second-color);
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    cursor: pointer;
+    
+  }
+  
+  .sidenav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  /* Active class */
+  .sidenav.active {
+    left: 0;
+  }
+  
+  /* Close btn */
+  .sidenav .close {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+  }
+  
+  /* Icône burger */
+  .burger-icon span {
+    display: none;
+    width: 35px;
+    height: 5px;
+    background-color: var(--main-color);;
+    margin: 6px 0;
+  }
+  
+
+
+@media screen and (max-width: 1000px) {
+    
+    .burger-icon span {
+        display: block;
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 6px 0;
+      }
+    
+
+    .header {
+        display: none;
+    }
+
+    .textBox {
+        margin: 10px;
+        color: var(--second-color);
+        background-color: var(--main-color);
+        border-radius: 2px;
+        border-color: var(--second-color);
+        border-style: solid;
+    }
+
+    #demoText {
+        width: 100%;
+        height: 100%;
+    }
+
+    button {
+        font-size: 20px;
+    }
+
+    #header h1 {
+        font-size: 40px;
+        letter-spacing: calc(1em / 8);
+        padding: calc(calc(1em / 8) / 2);
+    
+    }
+}
+
+
+@media screen and (max-width: 580px) {
+
+    button {
+        font-size: 15px;
+    }
+
+}
