--- a/public/elements/css/seeAccount.css
+++ b/public/elements/css/seeAccount.css
@@ -62,3 +62,11 @@ h1 {
 
     transition: 1s;
 }
+
+@media screen and (max-width: 1000px) {
+    
+    * {
+        --page-margin: 70px
+    }
+    
+}
