--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,12 +15,12 @@
 
     <div id="content">
         <div id="logoDiv" class="blur">
-            <img src="elements/img/logo.png" width="250px">
+            <img id="logo" src="elements/img/logo.png" >
         </div>
         <div id="demoText">
-            <h1 class="centertext"> Partagez vos textes !</h2>
+            <h1 class="centertext"> Partagez vos textes </h2>
             <div class="centerDiv">
-                <h2>Découvrez des textes de personnes du monde entier !</h2>
+                <h2> Découvrez des textes de personnes du monde entier !</h2>
                 <br>
             </div>
             <div id="buttons" class="centerDiv">
