--- a/public/elements/css/general.css
+++ b/public/elements/css/general.css
@@ -245,16 +245,14 @@ input[type="submit"] {
     margin: 6px 0;
   }
   
+#logo {
+    width: 250px;
+}
 
-
-@media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1000px) {
     
     .burger-icon span {
         display: block;
-        width: 35px;
-        height: 5px;
-        background-color: black;
-        margin: 6px 0;
       }
     
 
@@ -281,18 +279,37 @@ input[type="submit"] {
     }
 
     #header h1 {
-        font-size: 40px;
+        font-size: 60px;
         letter-spacing: calc(1em / 8);
         padding: calc(calc(1em / 8) / 2);
-    
+    }
+
+    #logo {
+        width: 100px;
+        height: 100px;
     }
 }
 
 
 @media screen and (max-width: 580px) {
 
+    #header h1 {
+        font-size: 40px;
+        letter-spacing: calc(1em / 8);
+        padding: calc(calc(1em / 8) / 2);
+    
+    }
+
     button {
         font-size: 15px;
+    }
+
+}
+
+@media screen and (max-width: 470px) {
+
+    button {
+        font-size: 10px;
     }
 
 }
