Change text depending on mode

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -44,7 +44,8 @@
             <a class="header" onclick="onClick('<%= cookieUser %>')">Mon Compte</a>
         <% } %>
       </li>
-      <li><a onclick="toggleMode()">Dark Mode</a></li>
+      <li><br></li>
+      <li><a onclick="toggleMode()" id="modeLink">Light Mode</a></li>
     </ul>
   </div>
 <script src="/elements/js/header.js"></script>
