--- a/public/elements/css/browseText.css
+++ b/public/elements/css/browseText.css
@@ -1,3 +1,10 @@
+body {
+    margin: auto;
+    background-color: var(--main-color);
+    color: var(--second-color);
+}
+
+
 #content {
     display: flex;
     flex-direction: column;
