change icon depending on mode

--- a/public/elements/css/general-dark.css
+++ b/public/elements/css/general-dark.css
@@ -1,6 +1,7 @@
 * {
     --main-color: rgb(34, 34, 34);
     --second-color: white;
+    --icon-url: url(http://localhost:25568/elements/img/user-icon-light.png)
 }
 
 
