--- a/public/elements/css/general.css
+++ b/public/elements/css/general.css
@@ -1,6 +1,8 @@
 * {
     --main-color: white;
     --second-color: black;
+    --icon-url: url(http://localhost:25568/elements/img/user-icon-dark.png)
+
 }
 
 
