--- a/views/seeAccount.ejs
+++ b/views/seeAccount.ejs
@@ -17,7 +17,7 @@
             <h1 id="pseudo">Pseudo</h1>
             <h1 id="id">Id</h2>
         </div>
-        <img onclick="disconnect()" id="userLogo" src="/elements/img/user-icon.png"></img>
+        <img onclick="disconnect()" id="userLogo" ></img>
     </div>
     <div id="userTexts">
     </div>
