--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -32,7 +32,7 @@
         
                 </div>
                 <div id="condition">
-                    <h2>Term and Condition of Use</h2>
+                    <a href="../cgu"><h2>Vous accepter les CGU</h2></a>
                     <input type="checkbox" name="condition" required>    
                 </div>
                 <br>
