--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <link href="elements/css/home.css" rel="stylesheet">
     <link href="elements/css/general.css" rel="stylesheet" id="stylesheetMode">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
-
+    <link rel="manifest" href="/elements/manifest.json">
     <title>Scriptum</title>
 </head>
 <body onload="setLatestText()">
