--- a/views/seeText.ejs
+++ b/views/seeText.ejs
@@ -21,6 +21,7 @@
         </div>
         <p id="content">Content</p>
     </div>
+    <a id="share" onclick="share()"><h2>Partager le texte</h2></a>
     <script src="/elements/js/seeText.js"></script>
 </body>
 </html>
