--- a/views/seeAccount.ejs
+++ b/views/seeAccount.ejs
@@ -6,7 +6,7 @@
     <link href="/elements/css/seeAccount.css" type="text/css" rel="stylesheet">
     <link href="/elements/css/general.css" type="text/css" rel="stylesheet" id="stylesheetMode">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
-
+    <script src="https://kit.fontawesome.com/8745fd224f.js" crossorigin="anonymous"></script>
     <title>Compte</title>
 
 </head>
@@ -15,7 +15,8 @@
     <div onload="setInfos()" id="userInfos" >
         <div id="userPseudo">
             <h1 id="pseudo">Pseudo</h1>
-            <h1 id="id">Id</h2>
+            <h2 id="id">Bio</h2>
+            <button><a href="../modify/account"><i class="fa-solid fa-pen-to-square"></i>‎ ‎ ‎ Modifié le compte</a></button>
         </div>
         <img onclick="disconnect()" id="userLogo" ></img>
     </div>
