--- a/views/account/modifyAccount.ejs
+++ b/views/account/modifyAccount.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/elements/css/seeAccount.css" type="text/css" rel="stylesheet">
+    <link href="/elements/css/modifyAccount.css" type="text/css" rel="stylesheet">
+
     <link href="/elements/css/general.css" type="text/css" rel="stylesheet" id="stylesheetMode">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
 
@@ -14,21 +15,24 @@
     <%- include('../components/header'); -%>
     <div id="userInfos" >
 
-        <form action="" method="post" id="form">
+        <div  id="form">
+            <div id="url">
+                <div>
+                    <h2>Lien de votre photo de profil</h2>
+                    <input type="text" name="password" class="textInput" id="pfpField"><br>
+                    <button onclick="updateImage()">Preview</button>
+                </div>
+                <img src="/elements/img/logo.ico" id="pfpPreview">
+            </div>
+
             <div id="description">
                 <h2 id="pseudoText">Description</h2>
-                <input type="text" name="pseudo" class="textInput" id="descriptionField"> <br>
-    
-            </div>
-            <div id="url">
-                <h2>Lien de votre photo de profil</h2>
-                <input type="text" name="password" class="textInput" id="pfpField"><br>
-    
+                <textarea class="textInput" id="descriptionField"></textarea>
             </div>
             <br>
-            <input type="submit" id="submit" value="Sauvegarder">
-        </form>
-
+            <button type="submit" id="submit" onclick="modifyAccount()">Sauvegarder</button>
+        </div>
+        <h3 id="errorField"></h3>
     </div>
 
 
