--- a/public/elements/css/modifyAccount.css
+++ b/public/elements/css/modifyAccount.css
@@ -21,11 +21,14 @@ body {
     margin-top: 20px;
 }
 
-input[type="text"] {
-    font-size: 15px;
+input[type="url"] {
+    font-size: 20px;
     width: 300px;
 }
 
+#errorField {
+    color: red;
+}
 
 textarea {
     width: 600px;
