Change lang for french

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,8 @@
     <link href="elements/css/general.css" rel="stylesheet" id="stylesheetMode">
     <link rel="icon" type="image/x-icon" href="/elements/img/logo.ico">
     <link rel="manifest" href="/elements/manifest.json">
+    <meta name="description" content="Publiez vos propres textes !">
+
     <title>Scriptum</title>
 </head>
 <body onload="setLatestText()">
